--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # Project Specific
 ######################
 /target/www/**
+/src/main/resources/config/application-dev.yml
+pom.xml
 /src/test/javascript/coverage/
 /src/test/javascript/PhantomJS*/
 
