--- a/pom.xml
+++ b/pom.xml
@@ -542,7 +542,7 @@
                     <url>jdbc:postgresql://localhost:5432/projectone</url>
                     <defaultSchemaName></defaultSchemaName>
                     <username>projectone</username>
-                    <password>projectone</password>
+                    <password></password>
                     <referenceUrl>hibernate:spring:co.metcsprojectone.domain?dialect=org.hibernate.dialect.PostgreSQL82Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                     <verbose>true</verbose>
                     <logging>debug</logging>
