--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -24,6 +24,7 @@
     "applicationType": "monolith",
     "testFrameworks": [],
     "jhiPrefix": "jhi",
-    "enableTranslation": false
+    "enableTranslation": false,
+    "herokuAppName": "glacial-fortress-65696"
   }
 }
