added project files, separate add dialog and controller

--- a/.jhipster/Project.json
+++ b/.jhipster/Project.json
@@ -32,6 +32,11 @@
         {
             "fieldName": "description",
             "fieldType": "String"
+        },
+        {
+            "fieldName": "pfiles",
+            "fieldType": "byte[]",
+            "fieldTypeBlobContent": "any"
         }
     ],
     "changelogDate": "20170608203211",
